--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -55,7 +55,7 @@ body {
   margin: 0;
   /* 1 */
   line-height: inherit;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   /* 2 */
 }
 
@@ -1867,13 +1867,13 @@ ul ul > li.menu-item-has-children:hover > a:after {
   transition-duration: 150ms;
 }
 
-.mobile-menu > ul > li.menu-item-has-children > a:after {
+/* .mobile-menu > ul > li.menu-item-has-children > a:after {
   position: absolute;
   content: "\f105";
   font-family: "flaticon";
   font-size: 13px;
   right: 1.25rem;
-}
+} */
 
 @media (min-width: 1024px) {
   .mobile-menu > ul > li.menu-item-has-children > a:after {
@@ -1881,9 +1881,9 @@ ul ul > li.menu-item-has-children:hover > a:after {
   }
 }
 
-.mobile-menu > ul > li.menu-item-has-children.open > a:after {
+/* .mobile-menu > ul > li.menu-item-has-children.open > a:after {
   content: "\f101";
-}
+} */
 
 .mobile-menu ul ul, .mobile-menu .rt-mega-menu {
   visibility: visible;
@@ -3872,8 +3872,8 @@ ul ul > li.menu-item-has-children:hover > a:after {
 }
 
 .px-\[50px\] {
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
 .py-\[65px\] {
@@ -5763,7 +5763,7 @@ ul ul > li.menu-item-has-children:hover > a:after {
   }
 
   .lg\:text-2xl {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     line-height: 2rem;
   }
 
@@ -5991,4 +5991,21 @@ ul ul > li.menu-item-has-children:hover > a:after {
 }
 .right-0{
   right: 0;
+}
+@media (max-width:576px){
+  .media-que{
+    width: 100%;
+    height: 100%;
+    padding: 10px 10px;
+  }
+  .side-padding{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  .topper{
+    margin-top: 3rem;
+  }
+  .toppers h2{
+    padding-top: 2rem;
+  }
 }
